--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  h1, h2, h3, h4, h5, h6, p, a, button, span {
+  h1, h2, h3, h4, h5, h6, p, a, button, span, label, input {
     @apply font-mono
   }
 }
